[package]
name = "bk_level"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.14", features = ["derive"] }
hex = "0.4.3"
image = "0.24.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
